...
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinner_reservation_detail_screening_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_reservation_detail_screening_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/spinner_reservation_detail_screening_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner_reservation_detail_screening_date" />

        <Button
            android:id="@+id/button_reservation_detail_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reservation_detail_minus"
            android:textAppearance="@style/Bold20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_reservation_detail_screening_date" />

        <TextView
            android:id="@+id/text_view_reservation_detail_number_of_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_detail_default_ticket_count"
            android:textAppearance="@style/Bold20"
            app:layout_constraintBottom_toBottomOf="@id/button_reservation_detail_minus"
            app:layout_constraintEnd_toStartOf="@id/button_reservation_detail_plus"
            app:layout_constraintStart_toEndOf="@id/button_reservation_detail_minus"
            app:layout_constraintTop_toTopOf="@id/button_reservation_detail_minus" />

        <Button
            android:id="@+id/button_reservation_detail_plus"
            android:layout_width="wrap_content"
...
