<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_reservation_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.reservation.booking.MovieReservationActivity">

    <include
        android:id="@+id/cl_reservation_movie_error"
        layout="@layout/layout_error"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_reservation_movie_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/cl_reservation_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_reservation_poster"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_movie_poster"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_reservation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="27dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_reservation_poster"
                    tools:text="해리 포터와 마법사의 돌" />

                <TextView
                    android:id="@+id/tv_reservation_running_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_reservation_title"
                    tools:text="상영일: 2024.3.1" />

                <TextView
                    android:id="@+id/tv_reservation_running_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_reservation_running_date"
                    tools:text="러닝타임: 152분" />

                <TextView
                    android:id="@+id/tv_reservation_movie_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="21dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_reservation_running_time"
                    tools:text="《해리 포터와 마법사의 돌》은 2001년 J. K. 롤링의 동명 소설을 원작으로 하여 만든, 영국과 미국 합작, 판타지 영화이다. 해리포터 시리즈 영화 8부작 중 첫 번째에 해당하는 작품이다. 크리스 콜럼버스가 감독을 맡았다." />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reservation_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/layout_reservation_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@id/btn_reservation_minus">

                <woowacourse.movie.presentation.reservation.booking.MovieReservationPicker
                    android:id="@+id/sp_reservation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxHeight="100dp" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <woowacourse.movie.presentation.reservation.booking.MovieReservationPicker
                    android:id="@+id/sp_reservation_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxHeight="100dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_reservation_minus"
                android:layout_width="65dp"
                android:layout_height="41dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="-"
                app:layout_constraintBottom_toTopOf="@id/btn_navigate_seat_selection"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_reservation_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_reservation_minus"
                app:layout_constraintEnd_toStartOf="@id/btn_reservation_plus"
                app:layout_constraintStart_toEndOf="@id/btn_reservation_minus"
                app:layout_constraintTop_toTopOf="@id/btn_reservation_minus"
                tools:text="1" />

            <Button
                android:id="@+id/btn_reservation_plus"
                android:layout_width="65dp"
                android:layout_height="41dp"
                android:layout_marginBottom="16dp"
                android:text="+"
                app:layout_constraintBottom_toTopOf="@id/btn_navigate_seat_selection"
                app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/btn_navigate_seat_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingVertical="11dp"
                android:text="좌석 선택"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>