<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reserve.ReserveActivity">


    <ScrollView
        android:id="@+id/sv_movie_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tl_reserve_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_movie_info"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@color/black"
                android:contentDescription="@string/description_movie_poster"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster"
                tools:text="해리포터와 마법사의 돌" />

            <TextView
                android:id="@+id/tv_screening_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="29dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="상영일: 2025.4.1 ~ 2025.4.5"/>


            <TextView
                android:id="@+id/tv_running_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_screening_date"
                app:layout_constraintTop_toBottomOf="@id/tv_screening_date"
                tools:text="러닝타임: 152분"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <TableLayout
        android:id="@+id/tl_reserve_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_movie_info">

        <TableRow>

            <Spinner
                android:id="@+id/sp_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/sp_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_text_minus"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_ticket_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="2" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_text_plus"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/btn_text_select_complete"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
